Estilos feitos e home com dados ainda estáticos

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,3 +42,26 @@
 .visualizacoes {
     margin-bottom: 0.1rem;
 }
+
+.iconeSite {
+    width: 11em;
+}
+
+.corpo {
+    background-color: black;
+}
+
+.container {
+    background-color: #f799b1;
+    color: white;
+}
+
+@media (min-width: 575px) {
+    .cabecalho {
+        margin-top: 1em;
+    }
+
+    .principal {
+        margin-bottom: 1em;
+    }
+}
