Data passado pra um trait

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,6 +23,8 @@
 .tituloMusicas {
     font-size: 1em;
     font-weight: bold;
+    color: white;
+    text-decoration: none;
 }
 
 .bordaVisualizacoes {
